# cheese-paper

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build.rs  manual.md
.forgejo/workflows/: ci.yaml  release.yaml
.github/workflows/: ci.yaml
resources/: cheese-paper-icon.kra  installer-dialogue.bmp.kra  screenshots  text-banner.bmp.kra
resources/spellcheck/en_US/: README_en_US-large.txt  en_US-large.dic  en_US.aff
src/: main.rs
src/components/: file_objects.rs  project.rs  test.rs  text.rs
src/components/file_objects/: reference.rs  tools.rs  utils.rs
src/components/schema/: tools.rs
src/schemas/: default.rs  mod.rs
src/schemas/default/: character.rs  folder.rs  place.rs  scene.rs
src/schemas/overthinker/: character.rs  folder.rs  note.rs  scene.rs  section.rs
src/ui/: editor_base.rs  elements.rs  message.rs  mod.rs  prelude.rs  project_editor.rs  project_tracker.rs  settings.rs  util.rs
src/ui/elements/: cheese_response.rs  layout.rs  name_box.rs  rendered_text.rs  text_box.rs
src/ui/elements/text_box/: format.rs  spellcheck.rs
src/ui/project_editor/: file_tree.rs  focus_jumper.rs  measurements.rs  page.rs  search.rs
src/ui/project_editor/page/: export_selection.rs  file_object_editor.rs  help.rs  project_metadata_editor.rs  statistics.rs
src/ui/project_editor/search/: global_search.rs  textbox_search.rs
src/ui/settings/: apply.rs  dictionaries.rs  settings_page.rs  theme.rs  version.rs
src/util/: dictionary.rs  error.rs  mod.rs  promise.rs  version.rs
wix/: main.wxs
