[package]
name = "cheese-paper"
version = "0.9.0"
edition = "2024"
description = "Organized writing tool with easy syncing and a simple file format"
repository = "https://codeberg.org/ByteOfBrie/cheese-paper"
license = "GPL-3.0-or-later"

# for wix
authors = ["Brie <brie@brie.gay>", "Eve <new-years-evening@proton.me>"]

# from `cargo msrv find`
rust-version = "1.92"

categories = ["text-editors", "filesystem"]

[package.metadata.bundle]
identifier = "gay.brie.CheesePaper"
category = "Productivity"
icon = ["resources/cheese-paper-icon.png"]
resources = ["resources/spellcheck/*"]

[profile.release]
lto = "fat"

[features]
metrics = []
schema_selection_dialogue = []

[dependencies]
# file components
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
toml = "1.0"
toml_edit = "0.25"
regex = "1.11.1"
uuid = { version = "1.17.0", features = ["v4"] }
log = "0.4"
tempfile = "3.20.0"
bitflags = "2.9.1"
semver = { version = "1.0", features = ["serde"]}
open = "5"

# ui
# we're temprorarily going to an egui version that's a few commits ahead of `0.34` to fix
# https://codeberg.org/ByteOfBrie/cheese-paper/issues/271
# once there's a new egui release, we'll update to that and won't have to deal with this
egui = { git = "https://github.com/emilk/egui.git", rev = "33e89e3" }
eframe = { git = "https://github.com/emilk/egui.git", rev = "33e89e3", features = [
    "persistence",   # Enable restoring app state when restarting the app.
] }

egui_ltreeview = { git = "https://github.com/ByteOfBrie/egui_ltreeview.git", branch = "egui_0.34_custom", features = ["persistence"] }
egui_dock = { git = "https://github.com/ByteOfBrie/egui_dock.git", branch = "egui_0.34_custom" }

flexi_logger = "0.31"
directories = "6"
rfd = "0.17"
hunspell-rs = "0.4"
notify = "8.1.0"
notify-debouncer-full = "0.7"
cow-utils = "0.1.3"
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
icu_casemap = "2.0.0"
rand = "0.10"
ureq = "3.2.0"
trash = "5"

[target.'cfg(target_os = "linux")'.dependencies]
uzers = "0.12"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
