[package]
name = "cheese-paper"
version = "1.0.0"
edition = "2024"
description = "Organized writing tool with easy syncing and a simple file format"
repository = "https://codeberg.org/ByteOfBrie/cheese-paper"
license = "GPL-3.0-or-later"

# for wix
authors = ["Brie <brie@brie.gay>", "Eve <new-years-evening@proton.me>"]

# from `cargo msrv find`
rust-version = "1.92"

categories = ["text-editors", "filesystem"]

[package.metadata.bundle]
identifier = "gay.brie.CheesePaper"
category = "Productivity"
icon = ["resources/cheese-paper-icon.png"]
resources = ["resources/spellcheck/*"]

[profile.release]
lto = "fat"

[features]
default = ["update_checking", "vendored-libgit2", "vendored-openssl", "vendored-hunspell"]
metrics = []
schema_selection_dialogue = []
update_checking = ["ureq", "semver"]
polling = []
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-openssl = ["git2/vendored-openssl"]
vendored-hunspell = ["hunspell-rs/bundled"]

[dependencies]
# file components
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
toml = "1.0"
toml_edit = "0.25"
regex = "1.11.1"
uuid = { version = "1.17.0", features = ["v4"] }
log = "0.4"
tempfile = "3.20.0"
bitflags = "2.9.1"
open = "5"

# ui
egui ="0.35"
eframe = { version = "0.35", features = [
    "persistence",   # Enable restoring app state when restarting the app.
] }

egui_ltreeview = { version = "0.8", features = ["persistence"] }
egui_dock = "0.20"

flexi_logger = "0.31"
directories = "6"
rfd = "0.17"
hunspell-rs = { version = "0.4", default-features = false }
notify = "8.1.0"
notify-debouncer-full = "0.7"
cow-utils = "0.1.3"
git2 = "0.20"
icu_casemap = "2.0.0"
rand = "0.10"
trash = "5"

semver = { version = "1.0", features = ["serde"], optional= true}
ureq = {version = "3.2.0", optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
uzers = "0.12"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
